# SpineBench

./: .gitignore  README.md  pyproject.toml
docs/: hf_inference_routing.md
docs/findings/: pilot_w3_v1_findings.md  pilot_w3_v4_findings.md  pilot_w3_v5_findings.md  pilot_w3_v6_findings.md
docs/rfcs/: 0001-evaluator.md  0002-corpus-builder.md  0003-model-runtime.md  README.md
paper/: prior_art_digest.md
scripts/: analyze_pilot.py  build_corpus.py  download_contamination_sample.py  probe_routable_models.py  run_pilot.py
spinebench/: __init__.py  audit.py  batch.py  cache.py  cli.py  evaluator.py  probes.py  reporting.py  runner.py  runtime.py  types.py
spinebench/data/: __init__.py  canaries.py  contamination.py  corpus.py  loaders.py  probes.py  scenarios.py  template_loader.py
spinebench/data/probes_yaml/: adversarial_probes.yaml
spinebench/data/templates/: pressure_templates.yaml
spinebench/judges/: __init__.py  ensemble.py  extractor.py
spinebench/providers/: __init__.py  base.py  hf_inference.py
spinebench/scoring/: __init__.py  aggregate.py  agreement.py
tests/: conftest.py
tests/unit/: test_aggregate.py  test_audit.py  test_batch.py  test_build_corpus.py  test_cache.py  test_canaries.py  test_cli.py  test_contamination.py  test_corpus.py  test_ensemble.py  test_evaluator.py  test_evaluator_json.py  test_extractor.py  test_fleiss.py  test_hf_inference_retry.py  test_kappa_over_results.py  test_probes.py  test_reporting.py  test_runner.py  test_runtime.py  test_scenarios.py  test_templates_yaml.py
